# OpexInsight

./: April 20 at 7_39 PM.qvs  BSP_Explained_Example.md  CLAUDE.md  FoldingCarton_InsightEngine_Brief.md  InsightOpexv1.qvs  OpexInsights_21Mar_WithoutDepartment.qvs
notifier/: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
notifier/src/: fetch.py  findings.py  freshness.py  grouper.py  logging_setup.py  mailer.py  renderer.py
notifier/templates/: admin_alert.html.j2  email.html.j2  email.txt.j2
notifier/tests/: test_findings.py  test_freshness.py  test_grouper.py  test_renderer.py
notifier/tests/fixtures/: sample_findings.csv  sample_summary.csv
